# chris-demo

./: .env.example  .gitignore  Makefile  README.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  run.py
.cursor/rules/: my-project-rules.mdc
alembic/: env.py
alembic/versions/: 76e7fda8436c_add_chat_history_tables.py  a4b5de1e7378_add_idempotency_keys_table.py
app/: agent.py  config.py  crud.py  db.py  logging_conf.py  main.py  models.py  pdf.py  schemas.py  tools.py
docs/: api_fit_report.md  repo_review.md  ui_implementation_summary.md
docs/samples/: chat.json  chat_stream.txt  create_quote.json  healthz.json  quote_2.json  test_summary.json
docs/status/: project_update.md
examples/: agent_usage.py  crud_usage.py  tools_usage.py
frontend/: README.md  main.py
frontend/react-ui/: README.md  package-lock.json  package.json  start-demo.sh
frontend/react-ui/src/: App.tsx  index.css
frontend/react-ui/src/components/: ChatInterface.tsx  PDFViewer.tsx  QuotePreview.tsx
frontend/react-ui/src/services/: api.ts
frontend/static/: app.js  styles.css
frontend/templates/: index.html
public/: index.html  streaming_demo.html
scripts/: acceptance_report.py  capture_samples.py  db.sh  dev.sh  seed_demo.py
tests/: test_agent.py  test_crud.py  test_endpoints.py  test_integration.py  test_logging.py  test_pdf.py  test_streaming.py  test_tools.py
